fix: 修复代码块z-index问题

--- a/src/style.css
+++ b/src/style.css
@@ -32,3 +32,7 @@ a:hover {
   box-shadow: 0px 0px 10px #999;
   background: #fafafa;
 }
+
+.v-code-block--code {
+  z-index: 0 !important;
+}
